--- a/sample/app/src/main/res/layout/fragment_second.xml
+++ b/sample/app/src/main/res/layout/fragment_second.xml
@@ -26,4 +26,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_second" />
 
+    <Button
+        android:id="@+id/button_toast"
+        android:text="@string/say_hello"
+        app:layout_constraintTop_toBottomOf="@id/button_second"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </android.support.constraint.ConstraintLayout>
