--- a/sample/app/src/main/res/layout/fragment_first.xml
+++ b/sample/app/src/main/res/layout/fragment_first.xml
@@ -25,4 +25,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/btn_load_assets"
+        android:text="@string/load_assets"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
