--- a/sample/app/src/main/res/layout/fragment_second.xml
+++ b/sample/app/src/main/res/layout/fragment_second.xml
@@ -1,28 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.SecondFragment">
 
-    <Button
-        android:id="@+id/button_second"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/previous" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <Button
-        android:id="@+id/button_toast"
-        android:text="@string/say_hello"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <Button
-        android:id="@+id/button_service"
-        android:text="@string/start_service"
+    </android.support.design.widget.AppBarLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:paddingStart="@dimen/page_margin_left"
+        android:paddingEnd="@dimen/page_margin_right"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
+
+        <me.shouheng.uix.widget.button.NormalButton
+            android:id="@+id/button_toast"
+            style="@style/NormalButtonStyle"
+            app:btn_normal_color="@color/secondly_button_color"
+            android:text="@string/second_say_hello" />
+
+        <me.shouheng.uix.widget.button.NormalButton
+            android:id="@+id/button_service"
+            style="@style/NormalButtonStyle"
+            app:btn_normal_color="@color/secondly_button_color"
+            android:text="@string/second_start_service" />
+
+        <me.shouheng.uix.widget.button.NormalButton
+            android:id="@+id/button_edit_dialog"
+            style="@style/NormalButtonStyle"
+            app:btn_normal_color="@color/secondly_button_color"
+            android:text="@string/second_show_edit_dialog" />
+
+    </LinearLayout>
 
 </LinearLayout>
