--- a/sample/app/src/main/res/values/dimens.xml
+++ b/sample/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <integer name="max_value_count">22</integer>
+
+    <dimen name="page_margin_right">16dp</dimen>
+    <dimen name="page_margin_left">16dp</dimen>
 </resources>
