--- a/sample/app/src/main/res/values/themes.xml
+++ b/sample/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">#000</item>
-        <item name="colorPrimaryDark">#000</item>
-        <item name="colorAccent">#000</item>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/cold_theme_primary</item>
+        <item name="colorPrimaryDark">@color/cold_theme_primary_dark</item>
+        <item name="colorAccent">@color/cold_theme_accent</item>
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
